# the_boys

./: Makefile  README.md  package-lock.json
contracts/: Forc.toml  comp-v-test.sh
contracts/asset_lib/: Forc.toml
contracts/asset_lib/src/: lib.sw
contracts/comp-v/: Cargo.toml  Forc.toml  README.md
contracts/comp-v/src/: events.sw  interface.sw  main.sw
contracts/comp-v/tests/: harness.rs
contracts/lending-market/: Cargo.toml  Forc.toml
contracts/lending-market/src/: main.sw
contracts/lending-market/tests/: harness.rs
contracts/oracle/: Cargo.toml  Forc.toml  README.md
contracts/oracle/src/: events.sw  interface.sw  main.sw
contracts/oracle/tests/: harness.rs
contracts/oracle_lib/: Forc.toml
contracts/oracle_lib/src/: lib.sw
contracts/src-6-vault-connector/: Cargo.toml  Forc.toml  README.md
contracts/src-6-vault-connector/src/: events.sw  interface.sw  main.sw
contracts/src-6-vault-connector/tests/: harness.rs
frontend/: .env.example  README.md  fuels.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BorrowDialog.tsx  CollateralTable.tsx  Drawer.tsx  Home.tsx  Navbar.tsx  (+13 more)
services/: README.md
services/claim/: Cargo.toml  Forc.toml  README.md
services/feeConverter/: Cargo.toml  Forc.toml
services/oracle-node/: .env.example  Cargo.toml  Dockerfile  compose.yaml
services/oracle-node/src/: lib.rs  main.rs
services/oracle-node/src/utils/: lib.rs
services/oracle-node/tests/functions/: mod.rs  run.rs
(+47 files in other folders)
